[package]
name = "hutools"
version = "0.0.1"
edition = "2021"
description="All tools sets"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4" }
chronoutil = { version = "0.2.3" }
nanoid = { version = "0.4.0" }
uuid = { version = "1.4.1", features = ["v4","fast-rng","macro-diagnostics"] }
ulid = { version = "1.0.0" }
